Issue #3359: highcontrast skin fix
adjusted colors of frame around sysconfig searchfield

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Widget.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Widget.css
@@ -168,6 +168,22 @@ ul.Tablelike li.Header {
     border-bottom: 1px solid var(--colBGDark);
 }
 
+.SearchBox input[type='text'] {
+    border-color: var(--colTextMedium);
+}
+
+.RTL .SearchBox input[type='text'] {
+    border-right: 1px solid var(--colTextMedium);
+}
+
+.SearchBox input:focus {
+    border-color: var(--colTextDark);
+}
+
+.SearchBox button {
+    border-color: var(--colTextDark)
+}
+
 /**
  * @subsection      Icon colors
  */
